Bug 790650 - It may be a good idea to have the debugger start with collapsed panels, r=past
UltraBlame original commit: 3c95dca80f3fee54d6be5bd644171c84f6112410

--- a/browser/themes/winstripe/devtools/debugger.css
+++ b/browser/themes/winstripe/devtools/debugger.css
@@ -5,7 +5,7 @@
 
 
 #body {
-  background: -moz-dialog;
+  background-color: white;
 }
 
 
